crates/pg_syntax/tests/snapshots/postgres_regress/circle@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT f1 FROM CIRCLE_TBL WHERE diameter(f1) >= 10;
---
SelectStmt@0..51
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "f1"
  Whitespace@9..10 " "
  From@10..14 "FROM"
  Whitespace@14..15 " "
  RangeVar@15..25
    Ident@15..25 "CIRCLE_TBL"
  Whitespace@25..26 " "
  Where@26..31 "WHERE"
  Whitespace@31..32 " "
  AExpr@32..50
    FuncCall@32..43
      Ident@32..40 "diameter"
      Ascii40@40..41 "("
      ColumnRef@41..43
        Ident@41..43 "f1"
    Ascii41@43..44 ")"
    Whitespace@44..45 " "
    GreaterEquals@45..47 ">="
    Whitespace@47..48 " "
    AConst@48..50
      Iconst@48..50 "10"
  Ascii59@50..51 ";"

