crates/pg_syntax/tests/snapshots/postgres_regress/circle@22.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT c1.f1 AS one, c2.f1 AS two, (c1.f1 <-> c2.f1) AS distance\n  FROM CIRCLE_TBL c1, CIRCLE_TBL c2\n  WHERE (c1.f1 < c2.f1) AND ((c1.f1 <-> c2.f1) > 0)\n  ORDER BY distance, area(c1.f1), area(c2.f1);"
---
SelectStmt@0..199
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    ColumnRef@7..12
      Ident@7..9 "c1"
      Ascii46@9..10 "."
      Ident@10..12 "f1"
    Whitespace@12..13 " "
    As@13..15 "AS"
    Whitespace@15..16 " "
    Ident@16..19 "one"
  Ascii44@19..20 ","
  Whitespace@20..21 " "
  ResTarget@21..33
    ColumnRef@21..26
      Ident@21..23 "c2"
      Ascii46@23..24 "."
      Ident@24..26 "f1"
    Whitespace@26..27 " "
    As@27..29 "AS"
    Whitespace@29..30 " "
    Ident@30..33 "two"
  Ascii44@33..34 ","
  Whitespace@34..35 " "
  ResTarget@35..64
    Ascii40@35..36 "("
    AExpr@36..51
      ColumnRef@36..41
        Ident@36..38 "c1"
        Ascii46@38..39 "."
        Ident@39..41 "f1"
      Whitespace@41..42 " "
      Op@42..45 "<->"
      Whitespace@45..46 " "
      ColumnRef@46..51
        Ident@46..48 "c2"
        Ascii46@48..49 "."
        Ident@49..51 "f1"
    Ascii41@51..52 ")"
    Whitespace@52..53 " "
    As@53..55 "AS"
    Whitespace@55..56 " "
    Ident@56..64 "distance"
  Newline@64..65 "\n"
  Whitespace@65..67 "  "
  From@67..71 "FROM"
  Whitespace@71..72 " "
  RangeVar@72..85
    Ident@72..82 "CIRCLE_TBL"
    Whitespace@82..83 " "
    Alias@83..85
      Ident@83..85 "c1"
  Ascii44@85..86 ","
  Whitespace@86..87 " "
  RangeVar@87..100
    Ident@87..97 "CIRCLE_TBL"
    Whitespace@97..98 " "
    Alias@98..100
      Ident@98..100 "c2"
  Newline@100..101 "\n"
  Whitespace@101..103 "  "
  Where@103..108 "WHERE"
  Whitespace@108..109 " "
  Ascii40@109..110 "("
  BoolExpr@110..151
    AExpr@110..123
      ColumnRef@110..115
        Ident@110..112 "c1"
        Ascii46@112..113 "."
        Ident@113..115 "f1"
      Whitespace@115..116 " "
      Ascii60@116..117 "<"
      Whitespace@117..118 " "
      ColumnRef@118..123
        Ident@118..120 "c2"
        Ascii46@120..121 "."
        Ident@121..123 "f1"
    Ascii41@123..124 ")"
    Whitespace@124..125 " "
    And@125..128 "AND"
    Whitespace@128..129 " "
    Ascii40@129..130 "("
    Ascii40@130..131 "("
    AExpr@131..151
      AExpr@131..146
        ColumnRef@131..136
          Ident@131..133 "c1"
          Ascii46@133..134 "."
          Ident@134..136 "f1"
        Whitespace@136..137 " "
        Op@137..140 "<->"
        Whitespace@140..141 " "
        ColumnRef@141..146
          Ident@141..143 "c2"
          Ascii46@143..144 "."
          Ident@144..146 "f1"
      Ascii41@146..147 ")"
      Whitespace@147..148 " "
      Ascii62@148..149 ">"
      Whitespace@149..150 " "
      AConst@150..151
        Iconst@150..151 "0"
  Ascii41@151..152 ")"
  Newline@152..153 "\n"
  Whitespace@153..155 "  "
  SortBy@155..172
    Order@155..160 "ORDER"
    Whitespace@160..161 " "
    By@161..163 "BY"
    Whitespace@163..164 " "
    ColumnRef@164..172
      Ident@164..172 "distance"
  Ascii44@172..173 ","
  Whitespace@173..174 " "
  SortBy@174..184
    FuncCall@174..184
      Ident@174..178 "area"
      Ascii40@178..179 "("
      ColumnRef@179..184
        Ident@179..181 "c1"
        Ascii46@181..182 "."
        Ident@182..184 "f1"
  Ascii41@184..185 ")"
  Ascii44@185..186 ","
  Whitespace@186..187 " "
  SortBy@187..197
    FuncCall@187..197
      Ident@187..191 "area"
      Ascii40@191..192 "("
      ColumnRef@192..197
        Ident@192..194 "c2"
        Ascii46@194..195 "."
        Ident@195..197 "f1"
  Ascii41@197..198 ")"
  Ascii59@198..199 ";"

