crates/pg_syntax/tests/snapshots/postgres_regress/circle@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO CIRCLE_TBL VALUES (' 1 , 3 , 5 ');"
---
InsertStmt@0..46
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "CIRCLE_TBL"
  Whitespace@22..23 " "
  SelectStmt@23..44
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..44
      AConst@31..44
        Sconst@31..44 "' 1 , 3 , 5 '"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

