crates/pg_syntax/tests/snapshots/postgres_regress/circle@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO CIRCLE_TBL VALUES (' < ( 100 , 1 ) , 115 > ');"
---
InsertStmt@0..58
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "CIRCLE_TBL"
  Whitespace@22..23 " "
  SelectStmt@23..56
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..56
      AConst@31..56
        Sconst@31..56 "' < ( 100 , 1 ) , 115 ..."
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

