crates/pg_syntax/tests/snapshots/postgres_regress/combocid@24.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: INSERT INTO combocidtest VALUES (333);
---
InsertStmt@0..38
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..24
    Ident@12..24 "combocidtest"
  Whitespace@24..25 " "
  SelectStmt@25..36
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..36
      AConst@33..36
        Iconst@33..36 "333"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

